--- a/frontend/src/locales/ro/sidenav.json
+++ b/frontend/src/locales/ro/sidenav.json
@@ -20,5 +20,6 @@
     "morning": "Neața",
     "afternoon": "Zi faină",
     "night": "Seară faină"
-  }
+  },
+  "collapseText": "Restrângeți Meniul"
 }
