--- a/frontend/src/locales/ro/common.json
+++ b/frontend/src/locales/ro/common.json
@@ -22,14 +22,15 @@
   "studyPrograms": {
     "NLP": "Natural Language Processing",
     "DS": "Data Science",
-    "SLA": "Securitate și Logică Aplicată",
+    "SAL": "Securitate și Logică Aplicată",
     "SD": "Sisteme Distribuite",
-    "IA": "Inteligență Artificială",
+    "AI": "Inteligență Artificială",
     "IS": "Inginerie Software",
     "BDTS": "Baze de Date și Tehnologii Software",
     "PSFS": "Probabilități și Statistică în Finanțe și Științe",
     "MD": "Matematică Didactică",
     "ASM": "Advanced Studies in Mathematics",
+    "AMA": "AMA",
     "TI": "Tehnologia Informației",
     "INFO": "Informatică",
     "MATEINFO": "Matematică-Informatică",
