--- a/frontend/src/locales/ro/forms.json
+++ b/frontend/src/locales/ro/forms.json
@@ -23,6 +23,11 @@
       }  
     },
     "dropDownFields": {
+      "degree": {
+        "label": "Ciclu de studii",
+        "placeholder": "Ciclu de studii",
+        "errorMessage": "Câmp obligatoriu"
+      },
       "teacher": {
         "label": "Profesor",
         "placeholder": "Profesor",
