--- a/frontend/src/locales/ro/sidenav.json
+++ b/frontend/src/locales/ro/sidenav.json
@@ -11,7 +11,7 @@
   },
   "adminLinks": {
     "settings": "Setări",
-    "optionsLists": "Liste Opționale",
+    "optionsLists": "Liste Opțiuni",
     "courses": "Cursuri",
     "accounts": "Conturi"
   },
