--- a/frontend/src/locales/ro/pages.json
+++ b/frontend/src/locales/ro/pages.json
@@ -80,6 +80,12 @@
     },
     "optionsLists": {
       "title": "Liste de opțiuni",
+      "filters": {
+        "domain": {
+          "label": "Domeniu",
+          "placeholder": "Domeniu"
+        }
+      },
       "error": {
         "create": "A apărut o eroare la crearea listei de opțiuni",
         "update": "A apărut o eroare la modificarea listei de opțiuni"
